refactor and extend: openAPI specification  for  PollenExchange add: Custom Query for PollenOfferStartDate add: Mapping for new DTO  and Unit Tests for it
Since the reference to either SpecimenFlowerRelationshipValue or  SpecimenStoppedFloweringRelationshipValue decides  whether  a  PollenOffer is currently active, a custom Query was introduced to  only return these
