# nepflow/src/main/java/com/nepflow/PollenExchange/Controller/PollenExchangeControllerImpl.java
@@ -1,10 +1,7 @@
 package com.nepflow.PollenExchange.Controller;
 
-import com.nepflow.PollenExchange.Dto.PollenOfferDTO;
-import com.nepflow.PollenExchange.Dto.TradeAnswerDTO;
-import com.nepflow.PollenExchange.Dto.TradeCreationDTO;
-import com.nepflow.PollenExchange.Dto.TradeDTO;
-import com.nepflow.PollenExchange.Model.PollenOffer;
+import com.nepflow.PollenExchange.Dto.*;
+import com.nepflow.PollenExchange.Model.PollenOfferStartDate;
 import com.nepflow.PollenExchange.Model.Trade;
 import com.nepflow.PollenExchange.Service.PollenExchangeService;
 import com.nepflow.UserManagement.Model.User;
@@ -15,6 +12,8 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 
+import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -47,18 +46,19 @@ public class PollenExchangeControllerImpl implements PollenexchangeApiDelegate {
 
     }
 
-    public ResponseEntity<List<PollenOfferDTO>> pollenexchangePollenoffersGet() {
-        List<PollenOffer> pollenOffers;
+    public ResponseEntity<List<PollenOfferDateContainerDTO>> pollenexchangePollenoffersGet(List<LocalDate> dates) {
+        List<PollenOfferStartDate> pollenOfferStartDates;
+        List<PollenOfferDateContainerDTO> pollenOfferDateContainerDTO  =  new ArrayList<>();
         User user = this.authenticationService.getAuthenticatedUser();
         if (user == null) {
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(null);
         }
-        pollenOffers = this.pollenExchangeService.getAllPollenOffersFromOtherUsers(user.getUsername());
-
-
-        return ResponseEntity.ok(pollenOffers.stream()
-                .map(pollenOffer -> this.modelMapper.map(pollenOffer, PollenOfferDTO.class))
-                .collect(Collectors.toList()));
+        pollenOfferStartDates = this.pollenExchangeService.getPollenOffersByDates(dates);
+        if(pollenOfferStartDates ==null){
+            return  ResponseEntity.ok(pollenOfferDateContainerDTO);
+        }else{
+            return  ResponseEntity.ok(pollenOfferStartDates.stream().map(row -> this.modelMapper.map(row,PollenOfferDateContainerDTO.class)).collect(Collectors.toList()));
+        }
 
     }
 
@@ -84,7 +84,7 @@ public class PollenExchangeControllerImpl implements PollenexchangeApiDelegate {
     }
 
 
-    public ResponseEntity<List<TradeDTO>> pollenexchangeTradesGet() {
+    public ResponseEntity<List<TradeDateContainerDTO>> pollenexchangeTradesGet() {
         List<Trade> trades;
         User user = this.authenticationService.getAuthenticatedUser();
         if (user == null) {
@@ -93,12 +93,19 @@ public class PollenExchangeControllerImpl implements PollenexchangeApiDelegate {
         trades = Stream.concat(this.pollenExchangeService.getAllInitiatedTradesFromUser(user).stream(),
                 this.pollenExchangeService.getAllRequestedTradesFromUser(user).stream()).collect(Collectors.toList());
 
-        return ResponseEntity.ok(trades.stream().map(trade -> this.modelMapper.map(trade,TradeDTO.class)).collect(Collectors.toList()));
+        return ResponseEntity.ok(trades.stream().map(trade -> this.modelMapper.map(trade,TradeDateContainerDTO.class)).collect(Collectors.toList()));
 
     }
 
+    public ResponseEntity<List<String>> pollenexchangePollenoffersDatesGet() {
+        return ResponseEntity.ok(this.pollenExchangeService.getAllDatesPollenOffer());
 
+    }
 
+    public ResponseEntity<List<String>> pollenexchangeTradesDatesGet() {
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
 
 
     }
